 	- use bus_job_method_cancel function in common code for dbus methods that cancel a job;
 	- rename job.subscribed field to job.clients;
 	- don't parse cmdline in containers;
 	- only generate warnings if actually writing to cgroup attributes failed;
 	- verify systemd1 dbus method callers via polkit;
 	- suffix newly added tcp sockopt time properties with "Sec";
 * libsystemd:
 	- always call epoll_ctl() on mask-updates if edge-triggered;
 	- don't require a signal event source to be enabled for the child event source to work;
 	- change type for address family to "int";
 	- remove sd-rtnl module;
 	- add support for CLOCK_BOOTTIME in sd-event module;
 	- always explicitly close bus from main programs;
 	- fix bloom filter calculation in sd-bus module;
 	- do not arm timers unnecessarily in sd-event module;
 	- remove bus arg from bus_verify_polkit_async_registry_free function;
 	- add api to check if a client has privileges;
 	- return 'r' rather than '-errno';
 	- remove sd_bus_message_append_array_memfd function;
 	- remove sd_bus_message_append_string_iovec function;
 	- remove sd_bus_message_append_string_space function;
 	- remove sd_bus_message_append_string_memfd function;
 	- remove sd-memfd module;
 	- add api to query which handler/callback is currently being dispatched;
 	- simplify bus_verify_polkit_async() a bit;
 	- fix cgroup handling in sd-bus module;
 	- map sealed memfds as MAP_PRIVATE in sd-bus module;
 * initctl:
 	- don't hide error code;
 * logind:
 	- allow switching to unused VTs via SwitchTo();
 	- use const modifier for id field in Session struct;
 	- update systemd-user PAM configuration file;
 	- add new session type "web" for PAM web clients, such as cockpit;
 * loginctl:
 	- change return type to void in help function;
 * kernel-install:
 	- move depmod install script to separate module;
 	- move kernel install script to separate module;
 * units: