@@ -721,9 +721,6 @@ const UnitVTable device_vtable = {
         .shutdown = device_shutdown,
 
         .status_message_formats = {
-                .starting_stopping = {
-                        [0] = "Expecting device %s...",
-                },
                 .finished_start_job = {
                         [JOB_DONE]       = "Found device %s.",
                         [JOB_TIMEOUT]    = "Timed out waiting for device %s.",
