@@ -1171,91 +1171,6 @@ static bool unit_condition_test(Unit *u) {
         return u->condition_result;
 }
 
-_pure_ static const char* unit_get_status_message_format(Unit *u, JobType t) {
-        const UnitStatusMessageFormats *format_table;
-
-        assert(u);
-        assert(t >= 0);
-        assert(t < _JOB_TYPE_MAX);
-
-        if (t != JOB_START && t != JOB_STOP)
-                return NULL;
-
-        format_table = &UNIT_VTABLE(u)->status_message_formats;
-        if (!format_table)
-                return NULL;
-
-        return format_table->starting_stopping[t == JOB_STOP];
-}
-
-_pure_ static const char *unit_get_status_message_format_try_harder(Unit *u, JobType t) {
-        const char *format;
-
-        assert(u);
-        assert(t >= 0);
-        assert(t < _JOB_TYPE_MAX);
-
-        format = unit_get_status_message_format(u, t);
-        if (format)
-                return format;
-
-        /* Return generic strings */
-        if (t == JOB_START)
-                return "Starting %s.";
-        else if (t == JOB_STOP)
-                return "Stopping %s.";
-        else if (t == JOB_RELOAD)
-                return "Reloading %s.";
-
-        return NULL;
-}
-
-static void unit_status_print_starting_stopping(Unit *u, JobType t) {
-        const char *format;
-
-        assert(u);
-
-        /* We only print status messages for selected units on
-         * selected operations. */
-
-        format = unit_get_status_message_format(u, t);
-        if (!format)
-                return;
-
-        DISABLE_WARNING_FORMAT_NONLITERAL;
-        unit_status_printf(u, "", format);
-        REENABLE_WARNING;
-}
-
-static void unit_status_log_starting_stopping_reloading(Unit *u, JobType t) {
-        const char *format;
-        char buf[LINE_MAX];
-
-        assert(u);
-
-        if (t != JOB_START && t != JOB_STOP && t != JOB_RELOAD)
-                return;
-
-        if (log_on_console())
-                return;
-
-        /* We log status messages for all units and all operations. */
-
-        format = unit_get_status_message_format_try_harder(u, t);
-        if (!format)
-                return;
-
-        DISABLE_WARNING_FORMAT_NONLITERAL;
-        snprintf(buf, sizeof(buf), format, unit_description(u));
-        char_array_0(buf);
-        REENABLE_WARNING;
-
-        log_struct_unit(LOG_INFO,
-                        u->id,
-                        "MESSAGE=%s", buf,
-                        NULL);
-}
-
 /* Errors:
  *         -EBADR:     This unit type does not support starting.
  *         -EALREADY:  Unit is already started.
@@ -1296,9 +1211,6 @@ int unit_start(Unit *u) {
                                u->id, following->id);
                 return unit_start(following);
         }
-
-        unit_status_log_starting_stopping_reloading(u, JOB_START);
-        unit_status_print_starting_stopping(u, JOB_START);
 
         /* If it is stopped, but we cannot start it, then fail */
         if (!UNIT_VTABLE(u)->start)
@@ -1349,9 +1261,6 @@ int unit_stop(Unit *u) {
                 return unit_stop(following);
         }
 
-        unit_status_log_starting_stopping_reloading(u, JOB_STOP);
-        unit_status_print_starting_stopping(u, JOB_STOP);
-
         if (!UNIT_VTABLE(u)->stop)
                 return -EBADR;
 
@@ -1393,8 +1302,6 @@ int unit_reload(Unit *u) {
                                u->id, following->id);
                 return unit_reload(following);
         }
-
-        unit_status_log_starting_stopping_reloading(u, JOB_RELOAD);
 
         unit_add_to_dbus_queue(u);
         return UNIT_VTABLE(u)->reload(u);
